feat : Connect mySql for databases

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,9 @@ repositories {
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
+    implementation 'mysql:mysql-connector-java:8.0.32'
+    implementation 'org.openjfx:javafx-controls:17.0.0'
+    implementation 'org.openjfx:javafx-fxml:17.0.0'
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
 }
