--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,11 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
     implementation 'mysql:mysql-connector-java:8.0.32'
     implementation 'org.openjfx:javafx-controls:17.0.0'
     implementation 'org.openjfx:javafx-fxml:17.0.0'
-    // This dependency is used by the application.
+    implementation 'org.xerial:sqlite-jdbc:3.34.0'
     implementation 'com.google.guava:guava:31.1-jre'
 }
 
